--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   --color-accent: #ff3400;
   --color-headings: #1b0760;
   --color-body: #918ca4;
+  --color-border: #ccc;
 }
 
 *,
@@ -211,5 +212,122 @@ a {
   .btn {
     padding: 2rem 4rem;
     font-size: 15px;
+  }
+}
+
+/* Inputs and Inputs Group */
+.input {
+  padding: 2rem 4rem;
+  border-radius: 40px;
+  outline: 0;
+  font-size: 2rem;
+  border: 1px solid var(--color-border);
+  margin: 0;
+}
+
+::placeholder {
+  color: #cdcbd7;
+}
+@media screen and (min-width: 1024px) {
+  .input {
+    font-size: 1.5rem;
+  }
+}
+
+.input-group {
+  border: 1px solid var(--color-border);
+  border-radius: 40px;
+  display: flex;
+}
+
+.input-group .input {
+  flex-grow: 1;
+  outline: 0;
+  border: 0;
+  padding: 1.5rem 1rem;
+}
+.input-group .btn {
+  margin: 4px;
+}
+
+.card {
+  border-radius: 7px;
+  box-shadow: 0 0 20px 10px #f3f3f3;
+  overflow: hidden;
+}
+.card .card__header,
+.card .card__body {
+  padding: 2rem 3rem;
+}
+
+.card--primary .card__header {
+  background: var(--color-primary);
+  color: #fff;
+}
+.card--secondary .card__header {
+  background: var(--color-secondary);
+  color: #fff;
+}
+
+.plan .plan__name {
+  font-size: 2.4rem;
+  margin: 0;
+  font-weight: 500;
+  color: #fff;
+}
+
+.plan .plan__price {
+  font-size: 6rem;
+  font-weight: 300;
+}
+
+.plan .plan__billing-cycle {
+  font-size: 2.4rem;
+  opacity: 0.9;
+  margin-right: 1rem;
+}
+.plan .badge--secondary {
+  background-color: #11c6e6;
+}
+.plan .badge--primary {
+  background-color: #1b69d0;
+}
+.plan .plan__description {
+  display: block;
+  font-weight: 300;
+  font-size: 2rem;
+  letter-spacing: 1px;
+}
+
+.plan .list__item {
+  font-size: 1.5rem;
+  font-weight: 200;
+  margin-bottom: 2rem;
+}
+
+.plan--popular .card__header {
+  position: relative;
+}
+.plan--popular .card__header::before {
+  position: absolute;
+  content: url(/images/popular.svg);
+  display: inline-block;
+  width: 40px;
+  top: -6px;
+  right: 5%;
+}
+
+@media screen and (min-width: 1024px) {
+  .plan__name {
+    font-size: 1.4rem;
+  }
+  .plan__price {
+    font-size: 5rem;
+  }
+  .plan__billing-cycle {
+    font-size: 1.6rem;
+  }
+  .plan__description {
+    font-size: 1.7rem;
   }
 }
