--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,7 @@ a {
     font-size: 1.5rem;
   }
 }
+/* Input Groups */
 
 .input-group {
   border: 1px solid var(--color-border);
@@ -250,6 +251,7 @@ a {
   margin: 4px;
 }
 
+/* Cards */
 .card {
   border-radius: 7px;
   box-shadow: 0 0 20px 10px #f3f3f3;
@@ -269,6 +271,7 @@ a {
   color: #fff;
 }
 
+/* Plan */
 .plan .plan__name {
   font-size: 2.4rem;
   margin: 0;
@@ -305,6 +308,7 @@ a {
   margin-bottom: 2rem;
 }
 
+/* Plan Popular Badge */
 .plan--popular .card__header {
   position: relative;
 }
@@ -330,4 +334,20 @@ a {
   .plan__description {
     font-size: 1.7rem;
   }
+}
+
+/* Media Object */
+
+.media {
+  display: flex;
+}
+
+.media__title {
+  margin-top: 0;
+}
+.media__body {
+  margin: 0 2rem;
+}
+.media__image {
+  margin-top: 1rem;
 }
