Created Plans Block

--- a/css/style.css
+++ b/css/style.css
@@ -292,16 +292,19 @@ a {
   color: #fff;
 }
 
+@media screen and (min-width: 768px) {
+}
+
 /* Plan */
 .plan .plan__name {
-  font-size: 2.4rem;
+  font-size: 1.5rem;
   margin: 0;
   font-weight: 500;
   color: #fff;
 }
 
 .plan .plan__price {
-  font-size: 6rem;
+  font-size: 3rem;
   font-weight: 300;
 }
 
@@ -310,6 +313,7 @@ a {
   opacity: 0.9;
   margin-right: 1rem;
 }
+
 .plan .badge--secondary {
   background-color: #11c6e6;
 }
@@ -319,7 +323,7 @@ a {
 .plan .plan__description {
   display: block;
   font-weight: 300;
-  font-size: 2rem;
+  font-size: 1.5rem;
   letter-spacing: 1px;
 }
 
@@ -327,6 +331,11 @@ a {
   font-size: 1.5rem;
   font-weight: 200;
   margin-bottom: 2rem;
+  border-bottom: 0;
+}
+
+.badge--small {
+  font-size: 1.4rem;
 }
 
 /* Plan Popular Badge */
@@ -342,7 +351,7 @@ a {
   right: 5%;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
   .plan__name {
     font-size: 1.4rem;
   }
@@ -354,6 +363,10 @@ a {
   }
   .plan__description {
     font-size: 1.7rem;
+  }
+  .badge {
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
   }
 }
 
@@ -662,4 +675,32 @@ a {
   .block-domain__prices {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
+}
+/* Plans Block */
+.plans--block {
+  padding: 4rem;
+  margin: 2rem auto;
+}
+
+.plan {
+  transition: transform 0.2s ease-out;
+}
+
+.plans--block .card {
+  max-width: 500px;
+  margin: 0 auto;
+}
+.plans--block .plan:hover {
+  transform: scale(1.05);
+}
+
+.plans--block .plan--popular {
+  transform: scale(1.06);
+}
+.plans--block .plan--popular:hover {
+  transform: scale(1.11);
+}
+.plans--block .grid {
+  grid-gap: 6rem 4rem;
+  /* row-gap: 10rem; */
 }
