Created the Feature Block

--- a/components/hero.html
+++ b/components/hero.html
@@ -13,7 +13,7 @@
           /images/Resized/banner@2x.webp 2x
         " />
       <source
-        type="image/webp"
+        type="image/png"
         srcset="
           /images/Resized/banner@1x.png 1x,
           /images/Resized/banner@2x.png 2x
