Created Showcase Block

--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,6 @@ a {
 /* LISTS */
 .list {
   list-style: none;
-  color: var(--color-headings);
   padding-left: 0;
 }
 .list--inline .list__item {
@@ -133,6 +132,7 @@ a {
 .list--tick {
   list-style-image: url(/images/tick.svg);
   padding-left: 3rem;
+  color: var(--color-headings);
 }
 .list--tick .list__item {
   padding-left: 0.5rem;
@@ -378,6 +378,7 @@ a {
 
 .media {
   display: flex;
+  margin-bottom: 4rem;
 }
 
 .media__title {
@@ -385,6 +386,7 @@ a {
 }
 .media__body {
   margin: 0 2rem;
+  font-size: 2rem;
 }
 .media__image {
   margin-top: 1rem;
@@ -545,26 +547,30 @@ a {
 }
 .block__header {
   text-align: center;
+  margin: 5rem auto;
 }
 .block__heading {
   margin-top: 0;
+  font-size: 6rem;
 }
 .block--dark {
   background: #000;
-  color: #fff;
+  color: #7b858b;
   margin-top: 3rem;
 }
-.block--dark .block__heading {
+.block--dark h1,
+.block--dark h2,
+.block--dark h3,
+.block--dark h4 {
   color: #fff;
-  font-size: 6rem;
 }
 .block--skewed-right {
-  padding: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+  padding-bottom: calc(var(--padding-vertical) + 4rem);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
 }
 .block--skewed-left {
-  padding: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
+  padding-bottom: calc(var(--padding-vertical) + 4rem);
+  clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%);
 }
 .container {
   max-width: 1140px;
@@ -727,4 +733,10 @@ a {
   .feature:nth-of-type(even) .feature__content {
     order: 2;
   }
+}
+
+/* ShowCase Block */
+.showcase__image {
+  width: 100%;
+  margin-bottom: 4rem;
 }
