--- a/components/feature_block.html
+++ b/components/feature_block.html
@@ -7,7 +7,7 @@
   <div class="grid grid--1x2 feature">
     <div class="feature__content">
       <span class="icon-container">
-        <svg class="icon icon--secondary">
+        <svg class="icon icon--primary">
           <use xlink:href="images/sprite.svg#easy"></use>
         </svg>
       </span>
@@ -35,7 +35,7 @@
   <div class="grid grid--1x2 feature">
     <div class="feature__content">
       <span class="icon-container">
-        <svg class="icon icon--secondary">
+        <svg class="icon icon--primary">
           <use xlink:href="images/sprite.svg#computer"></use>
         </svg>
       </span>
@@ -62,7 +62,7 @@
   <div class="grid grid--1x2 feature">
     <div class="feature__content">
       <span class="icon-container">
-        <svg class="icon icon--secondary">
+        <svg class="icon icon--primary">
           <use xlink:href="images/sprite.svg#wordpress"></use>
         </svg>
       </span>
@@ -89,7 +89,7 @@
   <div class="grid grid--1x2 feature">
     <div class="feature__content">
       <span class="icon-container">
-        <svg class="icon icon--secondary">
+        <svg class="icon icon--primary">
           <use xlink:href="images/sprite.svg#clock"></use>
         </svg>
       </span>
